--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@types/jest": "^29.5.12",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
