--- a/package.json
+++ b/package.json
@@ -19,10 +19,19 @@
   "devDependencies": {
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
+    "@types/abstract-leveldown": "^7.2.5",
+    "@types/chai": "^4.3.14",
     "@types/jest": "^29.5.12",
+    "@types/level-errors": "^3.0.2",
+    "@types/levelup": "^5.1.5",
+    "@types/mkdirp": "^2.0.0",
     "@types/node-fetch": "^2.6.11",
+    "@types/prettier": "^3.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^3.2.12",
+    "@types/sinonjs__fake-timers": "^8.1.5",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
